--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "aocrunner": "^1.9.6",
     "prettier": "^2.8.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "lodash-es": "^4.17.21"
+  },
   "engines": {
     "node": ">=20.0.0"
   }
